<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteEmployeeActivity">


    <TextView
        android:id="@+id/heading_text_view_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:padding="5sp"
        android:text="@string/delete_an_entry"
        android:textColor="#E44236"
        android:textSize="31sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#E44236"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/employee_id_edit_text_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="10sp"
            android:background="#FFF"
            android:ems="10"
            android:hint="@string/enter_id_here"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:padding="7sp"
            android:textSize="27sp" />


        <Button
            android:id="@+id/delete_button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="20dp"
            android:background="#FFF"
            android:padding="7sp"
            android:text="@string/delete_entry"
            android:textColor="#E44236"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/go_back_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="#E44236"
        android:padding="7sp"
        android:text="@string/go_back"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>