<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading_text_view_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/employee_nmanagement_app"
        android:textColor="#FF5722"
        android:textSize="31sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottom_text_view_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/crud_app_using_sql"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/developer_contact_main"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FF5722"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_text_view_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_text_view_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/create_button_main"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/create"
                tools:srcCompat="@drawable/create" />

            <ImageButton
                android:id="@+id/read_button_main"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/read"
                tools:srcCompat="@drawable/read" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/update_button_main"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/update"
                tools:srcCompat="@drawable/update" />

            <ImageButton
                android:id="@+id/delete_button_main"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/delete"
                tools:srcCompat="@drawable/delete" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/developer_contact_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FF5722"
        android:padding="7sp"
        android:text="@string/developer_ncontact"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>